--- a/ExcelFinder/ExcelFinder.csproj
+++ b/ExcelFinder/ExcelFinder.csproj
@@ -56,16 +56,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExcelFind.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ExcelFinderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ExcelFinderForm.Designer.cs">
+      <DependentUpon>ExcelFinderForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ExcelFinderForm.aa.resx">
+      <DependentUpon>ExcelFinderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExcelFinderForm.bin.resx">
+      <DependentUpon>ExcelFinderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExcelFinderForm.en-US.resx">
+      <DependentUpon>ExcelFinderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExcelFinderForm.ja-JP.resx">
+      <DependentUpon>ExcelFinderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ExcelFinderForm.resx">
+      <DependentUpon>ExcelFinderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
